docs/apache-airflow-providers-google/10.0.0/_sources/_api/tests/system/providers/google/cloud/vertex_ai/example_vertex_ai_auto_ml_tabular_training/index.rst.txt
:py:mod:`tests.system.providers.google.cloud.vertex_ai.example_vertex_ai_auto_ml_tabular_training`
==================================================================================================

.. py:module:: tests.system.providers.google.cloud.vertex_ai.example_vertex_ai_auto_ml_tabular_training

.. autoapi-nested-parse::

   Example Airflow DAG for Google Vertex AI service testing Auto ML operations.



Module Contents
---------------

.. py:data:: ENV_ID

   

.. py:data:: PROJECT_ID

   

.. py:data:: DAG_ID
   :value: 'vertex_ai_auto_ml_operations'

   

.. py:data:: REGION
   :value: 'us-central1'

   

.. py:data:: TABULAR_DISPLAY_NAME

   

.. py:data:: MODEL_DISPLAY_NAME
   :value: 'adopted-prediction-model'

   

.. py:data:: TABULAR_GCS_BUCKET_NAME

   

.. py:data:: RESOURCES_PATH

   

.. py:data:: TABULAR_ZIP_CSV_FILE_LOCAL_PATH

   

.. py:data:: TABULAR_GCS_OBJECT_NAME
   :value: 'vertex-ai/tabular-dataset.csv'

   

.. py:data:: TABULAR_CSV_FILE_LOCAL_PATH
   :value: '/tabular/tabular-dataset.csv'

   

.. py:data:: TABULAR_DATASET

   

.. py:data:: COLUMN_TRANSFORMATIONS

   

.. py:data:: create_bucket

   

.. py:data:: test_run

   

